# CUHK-SZ-CSC4005-ParallelComputing

./: .gitignore  README.md
parallel/: CMakeLists.txt  main.cpp
parallel/HW1/: CMakeLists.txt  MPI.cpp  Seq.cpp
parallel/HW2/: CMakeLists.txt  MPI_Mandelbrot.cpp  Mandelbrot.py  Ptd_Mandelbrot.cpp  Seq_MandelBrot.cpp  hello_X.cpp  make_list.py  performance.csv  plot.py  x11.cpp  x11_exercise.cpp  x11_moving_object.cpp
parallel/HW2/list/: mpi_12800_12800_m_16.pbs  mpi_12800_12800_m_2.pbs  mpi_12800_12800_m_32.pbs  mpi_12800_12800_m_4.pbs  mpi_12800_12800_m_64.pbs  mpi_12800_12800_m_8.pbs  mpi_14800_14800_m_16.pbs  mpi_14800_14800_m_2.pbs  mpi_14800_14800_m_32.pbs  mpi_14800_14800_m_4.pbs  mpi_14800_14800_m_64.pbs  mpi_14800_14800_m_8.pbs  mpi_1600_1600_m_16.pbs  mpi_1600_1600_m_2.pbs  mpi_1600_1600_m_32.pbs  mpi_1600_1600_m_4.pbs  mpi_1600_1600_m_64.pbs  mpi_1600_1600_m_8.pbs  mpi_17920_17920_m_16.pbs  mpi_17920_17920_m_2.pbs  mpi_17920_17920_m_32.pbs  mpi_17920_17920_m_4.pbs  mpi_17920_17920_m_64.pbs  mpi_17920_17920_m_8.pbs  mpi_20000_20000_m_16.pbs  mpi_20000_20000_m_2.pbs  mpi_20000_20000_m_32.pbs  mpi_20000_20000_m_4.pbs  mpi_20000_20000_m_64.pbs  mpi_20000_20000_m_8.pbs  mpi_200_200_m_16.pbs  mpi_200_200_m_2.pbs  (+124 more)
parallel/HW3/: CMakeLists.txt  make_list.cpp  mpi_N_body.cpp  omp_N_body.cpp  ompi.csv  ompi_N_body.cpp  p.csv  per.csv  plot.py  pth_N_body.cpp  seq_N_body.cpp  zyw-3body.py  三体均衡情况.py
parallel/HW4/: CMakeLists.txt  make_list.cpp  mpi_heat.cpp  omp_heat.cpp  ompi_heat.cpp  p_performance.csv  plot.py  pth_heat.cpp  seq_heat.cpp  test.cpp
(+519 files in other folders)
