include_directories()
add_executable(HW2 hello_X.cpp)
add_executable(exer x11_exercise.cpp)
add_executable(x11 x11.cpp)
add_executable(moving x11_moving_object.cpp)
add_executable(Seq_Mandel Seq_MandelBrot.cpp)
add_executable(Ptd_Mandel Ptd_Mandelbrot.cpp )
add_executable(MPI_Mandel MPI_Mandelbrot.cpp)

